# secs

./: .gitmodules  CMakeLists.txt  README.md
docs/: ecs.md  scene-files.md
example/: CMakeLists.txt
example/basic/: CMakeLists.txt  main.cpp
example/stress_test/: CMakeLists.txt  main.cpp
include/: Assert.hpp  Component.hpp  ComponentBitMap.hpp  ComponentList.hpp  ComponentManager.hpp  EntityHandle.hpp  EntityManager.hpp  Scene.hpp  SingletonManager.hpp  System.hpp  SystemManager.hpp  SystemPhase.hpp
secs/: Component.hpp  ComponentList.hpp  ComponentManager.hpp  Entity.hpp  EntityManager.hpp  IComponentList.hpp  Scene.hpp  System.hpp  SystemManager.hpp  secs.hpp  secsTypes.hpp
secs/components/: CameraComponent.hpp  Component.hpp  TextureComponent.hpp  TransformComponent.hpp
secs/include/secs/: Component.hpp  Entity.hpp  InputData.hpp  Scene.hpp  System.hpp
secs/internal/: ComponentManager.hpp  EntityManager.hpp  IComponentList.hpp  SystemManager.hpp
secs/systems/: CameraSystem.hpp  RenderSystem.hpp  System.hpp
secs/util/: InputData.hpp  secsTypes.hpp  types.hpp
src/: ComponentManager.hpp  EntityManager.cpp  EntityManager.hpp  IComponentList.hpp  SystemManager.hpp
src/components/: IComponent.hpp  TextureComponent.hpp  TransformComponent.hpp
src/util/: assert.hpp  types.hpp
test/: CMakeLists.txt
